--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web developer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
+        <p>I’m an aspiring web developer who loves to create. i grow up in south africa and israel, I've lived in lots of different places and have worked as a financial analyst, and i've done a few freelance jobs building projects using microsoft excel and vba.  I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
         <p>I have a Degree in Economics &amp; management and am a life-long learner who's always interested in expanding my skills.</p>
       </div>
 
@@ -36,7 +36,7 @@
           <li>CSS</li>
           <li>JavaScript</li>
         </ul>
-        <p>I’d like to work as a web developer, helping clients create an impressive online presence.</p>
+        <p>I’d like to work as a web developer, building complex projects and helping clients and myself create an impressive online presence. i am seeking to work at a start-up and freelance jobs, and learn to become full-stack developer.</p>
       </div>
 
     </main>
